1.1.0
  * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
  * Added support for phase centers other than zenith to the various functions in lsl.imaging.overlay
  * Added support for determining coordinates for images with phase centers other than zenith to the lsl.imaging.utils module

1.0.3
  * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
  * Added fallbacks to lsl.misc.geodesy to use a backup EOP server if the primary is unreachable
  * Fixed a bug in imageIDI.py that caused it to crash if a FITS image is not saved
  * Added a new module, lsl.misc.rfutil, to help with understanding commercial antenna properties
  * Moved the calculateSEFD() function out of lsl.sim.vis and into lsl.misc.rfutil
  * Changed the meaning of the 'ForceGaussian' keyword in lsl.sim.vis.buildSimArray to contain the Gaussian full widths at half maximum in degrees
  * Added Boltzmann's constant to lsl.common.constants
  * Added a 'color' keyword to the various functions in lsl.imaging.overlay to change the color of the overlay
  * Added a 'marker' keyword to the lsl.imaging.overlay.source() to change symbol of the source overlay

1.0.2
  * Added documentation for LDP to the Sphinx build system
  * Added a call to close() for the data dictionary used in lsl.sim.vis.buildSimArray
  * Fixed a version number regression in lsl.correlator.fx
  * Added a call to close() for the data dictionary used in lsl.skymap.SkyMapGSM

1.0.1
  * Added an option to updateLSLSSMIF.py to update the LWA1 SSMIF using a local file
  * Fixed a build problem on OS X with Python 2.7
  * Added support for using PyFFTW in the lsl.misc.dedispersion module
  * Added support for using PyFFTW in the lsl.correlator.filterbank module
  * Fixed a sign problem in the rewritten lsl.skymap.ProjectedSky class that caused the sky to invert in azimuth
  * Added support for FFTW wisdom