@@ -2,6 +2,7 @@
   * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
   * Added support for phase centers other than zenith to the various functions in lsl.imaging.overlay
   * Added support for determining coordinates for images with phase centers other than zenith to the lsl.imaging.utils module
+  * Added a new image analysis module, lsl.imaging.analysis, that allows one to find point sources in a 2-D image
 
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
